--- a/src/App.css
+++ b/src/App.css
@@ -4,8 +4,6 @@
   max-width: 100vw;
   padding: 0;
   margin: 0;
-  background-color: #121212;
-  color: #FFF;
   ::-webkit-scrollbar { width: 6px; cursor: pointer; }
   ::-webkit-scrollbar-track { background: #202020; }
   ::-webkit-scrollbar-thumb { background: #7c3aed; border-radius: 10px; }
@@ -13,16 +11,23 @@
 }
 body, #root {
   max-width: 100vw;
+  overflow-x: hidden;
 }
-*{
-  box-sizing: border-box;
-}
-.main{
+.main-app-dark{
+  width: 100vw;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  background-color: #121212;
+  color: #b388ff;
 }
-.component-app {
+.main-app-light{
+    width: 100vw;
+  display: flex;
+  flex-direction: column;
+  background-color: #fdf6e3;
+  color: #121212;
+}
+.components {
   width: 60%;
   min-height: 100vh;
   max-width: 60%;
@@ -30,9 +35,9 @@ body, #root {
   flex-direction: column;
   align-items: center;
   margin: 0 auto;
+  background-color: inherit;
+  color: inherit;
 }
-
-
 
 .navbar{
   width: 100%;
@@ -49,7 +54,7 @@ body, #root {
   padding: 8px 12px;
   border-radius: 8px;
   font-size: 15px;
-  color: #fff;
+  color: inherit;
   font-family: "Lilex", monospace;
   outline: none;
   width: 150px;
@@ -88,6 +93,7 @@ body, #root {
 }
 .summary-container{
   flex-direction: column;
+  color: #fff;
 }
 .btn-container,
 .summary-container {
@@ -129,8 +135,7 @@ body, #root {
 
 input.form-control,
 textarea.form-control {
-  background-color: #121212;
-  color: #e0e0e0;
+  background-color: inherit;
   border-color: #2a2a2a;
 }
 textarea.form-control {
@@ -145,7 +150,7 @@ textarea.form-control::placeholder {
 
 
 textarea.form-control:focus {
-  background-color: #121212;
+  background-color: inherit;
   color: #ffffff;
   border-color: #86b7fe;
   box-shadow: 0 0 1rem 0.55rem rgba(13,110,253,.25);
@@ -174,4 +179,7 @@ textarea.form-control {
 .preview-text {
   line-height: 1.7;
   opacity: 0.8;
+}
+.toggle-container{
+  margin-left: 1rem;
 }
