--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,8 @@
   padding: 0;
   margin: 0;
   ::-webkit-scrollbar { width: 6px; cursor: pointer; }
-  ::-webkit-scrollbar-track { background: #202020; }
-  ::-webkit-scrollbar-thumb { background: #7c3aed; border-radius: 10px; }
-  ::-webkit-scrollbar-thumb:hover { background: #5a1ea6;}
+  
+
 }
 body, #root {
   max-width: 100vw;
@@ -20,6 +19,9 @@ body, #root {
   flex-direction: column;
   background-color: #121212;
   color: #b388ff;
+  ::-webkit-scrollbar-track { background: #202020; }
+  ::-webkit-scrollbar-thumb { background: #7c3aed; border-radius: 10px; }
+  ::-webkit-scrollbar-thumb:hover { background: #5a1ea6;}
 }
 .main-app-light{
   width: 100vw;
@@ -28,6 +30,18 @@ body, #root {
   flex-direction: column;
   background-color: #fdf6e3;
   color: #121212;
+  ::-webkit-scrollbar-track {
+      background: #f5edd7; 
+    }
+
+    ::-webkit-scrollbar-thumb {
+      background: #d6c9a8; 
+      border-radius: 10px;
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+      background: #c2b48e;
+    }
 }
 .components {
   width: 60%;
@@ -80,7 +94,6 @@ body, #root {
     0 0 25px rgba(179,136,255,0.5),
     0 0 40px rgba(179,136,255,0.3);
 
-  background: linear-gradient(90deg, #9f5bff, #d582ff);
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
@@ -98,20 +111,30 @@ body, #root {
   color: #fff;
 }
 .btn-container,
-.summary-container {
+.summary-container{
     width: 100%;
     display: flex;
     justify-content: space-around;
     align-items: space-around;
     gap: 1rem;
-    background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+    background: none;
+    box-shadow: none;
     border-radius: 16px;
     padding: 16px;
-    box-shadow: 0 0 25px rgba(0, 255, 255, 0.15);
     padding: 1rem;
     margin-top: 1rem;
     border-radius: 20px;
     flex-wrap: wrap;
+}
+.btn-container-dark,.summary-container-dark{
+    background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+    box-shadow: 0 0 25px rgba(0, 255, 255, 0.15);
+}
+.btn-container-light,.summary-container-light{
+    background: linear-gradient(135deg, #b8d5f8, #73a9ec, #71aff7);
+    box-shadow: 0 10px 30px rgba(59, 130, 246, 0.35);
+    color: #121212;
+    
 }
 .textAreaHeading{
     font-size: 1.3rem;
